# rustMusic

./: .gitignore  Cargo.toml  README.md  scratch.rs  scratch2.rs
.github/workflows/: release.yml
src/: audio.rs  config.rs  main.rs  playlist.rs  theme.rs  ui.rs
